# PICASSO

./: .gitattributes  .gitignore  ACKNOWLEDGMENTS.md  NOTICE  README.md  pyproject.toml
Project_Statement/: Codex_Prompt_SC26_PICASSO_ComboA_Final_Rev3_TemplateStyle.docx
configs/: baselines.json  bootstrap_legality.json  interfaces.json  memory.json  packages.json  paper_core.json  paper_full.json  paper_smoke.json  picasso_runner_schema.json  process_nodes.json
docs/: ACCEPTANCE_STATUS.md  AGENT.md  CALIBRATION_STATUS_ZH.md  CODE_REFACTOR_CHECKLIST.md  Checklist.md  OPEN_SOURCE_STRUCTURE.md  PAPER_MAPPING.md  PICASSO_Modification_Guide_ZH.md  PROJECT_STATEMENT_CODEX.md  Plan.md  README.md  REFACTOR_DECISIONS.md  REPRODUCE.md  SRC_SEMANTIC_RECOVERY_LEDGER.md
paper/: README.md
picasso/: __init__.py
picasso/core/: __init__.py  area_model.py  baselines.py  buffer_model.py  cluster_model.py  common_math.py  core_mapping_engine.py  core_model.py  cost_model.py  data_layout.py  engine.py  evaluator.py  (+15 more)
scripts/: generate_workload_traces.sh  run_backend_core.sh  run_backend_full.sh  run_backend_smoke.sh  run_figure4.sh  run_figure5.sh  run_figure6.sh  run_figure7.sh  run_figure8.sh  run_paper_core.sh  run_paper_full.sh  run_paper_full_parallel.sh  run_points_parallel.sh  run_smoke.sh
validation/: compute_grounding.csv  interface_envelope.csv  manifest.json  package_yield_anchor.csv
workloads/: README.md  cnn_inference.json  dense_decoder_block.json  index.json  kv_heavy_decode.json  long_context_prefill.json  megatron_collective_trace.json  mixtral_moe_trace.json
(+386 files in other folders)
